# pypo-cli

./: .gitignore  README.md  learning.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/pp/: __init__.py  cli.py
src/pp/commands/: __init__.py  archive.py  create.py  delete.py  duplicate.py  edit.py  export.py  init.py  list_cmd.py  source.py
src/pp/core/: __init__.py  config.py  generator.py  parser.py  storage.py
src/pp/utils/: __init__.py  helpers.py
src/pypo/: __init__.py  cli.py
src/pypo/commands/: __init__.py  archive.py  create.py  delete.py  duplicate.py  edit.py  export.py  init.py  list_cmd.py  source.py
src/pypo/core/: __init__.py  config.py  generator.py  parser.py  storage.py
src/pypo/utils/: __init__.py  helpers.py
templates/: example.yaml
tests/: __init__.py  test_commands.py
